--- a/index.html
+++ b/index.html
@@ -19,5 +19,51 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="description"
-        content="I'm Ali Meho. Security Operation Center SOC Analyst Tier 1. "/>
+        content="I'm Mohamed Ayman Elshazly. Security Operation Center SOC Analyst Tier 1. "/>
   <meta
+    name="keywords"
+    content="Ali Meho, ali meho, 0xMeho.github.io, github 0xMeho"
+  />
+  <meta name="author" content="Mohamed Ayman, Elshazly, 0xElshazly, Mohamed Ayman Elshazly"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+
+  <!-- Facebook Card -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Ali Meho"/>
+  <meta property="og:description"
+        content="I'm Ali Meho. Security Operation Center SOC Analyst Tier 1. "/>
+  <meta property="og:image" content="assets/img/meta/Profile.png"/>
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@0xElshazly">
+  <meta name="twitter:title" content="Mohamed El-Shazly">
+  <meta name="twitter:description"
+        content="I'm Ali Meho. Security Operation Center SOC Analyst Tier 1. ">
+  <meta name="twitter:image" content="assets/img/meta/Profile.png">
+
+  <!-- Title -->
+  <title>Mohamed Ayman</title>
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="assets/img/favicon.ico"/>
+
+  <!-- Google Font -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap"
+        rel="stylesheet">
+
+  <!-- Vendor Styles [Bootstrap - Boxicons - Venobox - AOS] -->
+  <link rel="stylesheet" href="assets/css/all.vendors.min.css"/>
+
+  <!-- Main Style -->
+  <link rel="stylesheet" href="assets/css/style.min.css"/>
+
+  <!-- Check LocalStorage Script -->
+  <script>
+    // Get LocalStorage Value
+    let localMode = localStorage.getItem("MS-Mood");
+    // Change Mode Depending On LocalStorage Value
+    localMode !== null ? document.documentElement.setAttribute("data-theme", localMode) : document.documentElement.setAttribute("data-theme", "dark");
+  </script>
+</head>
