--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <meta name="twitter:image" content="assets/img/meta/Profile.png">
 
   <!-- Title -->
-  <title>Mohamed Ayman</title>
+  <title>Ali Meho</title>
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="assets/img/favicon.ico"/>
