--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
   <!-- Start Hero -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="200">
-      <h1>Mohamed Ayman Elshazly</h1>
+      <h1>Ali Meho</h1>
       <p>
         
          <span  style="animation: text 10s infinite alternate; font-weight: 700;" class="typed" data-typed-items="SOC Analyst Tier 1"></span>
