--- a/index.html
+++ b/index.html
@@ -136,19 +136,16 @@
       </p>
       <p></p>
       <div class="social-links">
-        <a href="https://github.com/0xElshazly" target="_blank" class="github">
+        <a href="https://github.com/0xMeho" target="_blank" class="github">
           <i class="bx bxl-github"></i>
         </a>
-        <a href="https://www.linkedin.com/in/mohamed-ayman-elshazly-4b303b203/" target="_blank" class="linkedin">
+        <a href="https://www.linkedin.com/in/ali-meho-1n9sa30b9/" target="_blank" class="linkedin">
           <i class="bx bxl-linkedin"></i>
         </a>
-        <a href="https://twitter.com/0xElshazly" target="_blank" class="twitter">
+        <a href="https://twitter.com/0xMeho" target="_blank" class="twitter">
           <i class="bx bxl-twitter"></i>
         </a>
-        <a href="https://www.facebook.com/profile.php?id=100012710940984" target="_blank" class="facebook">
-          <i class="bx bxl-facebook-circle"></i>
-        </a>
-        <a href="mailto:mohamed.ayman.alshzly@gmail.com" target="_blank" class="envelope">
+        <a href="mailto:a_meho@fanshaweonline.ca" target="_blank" class="envelope">
           <i class="bx bxs-envelope"></i>
         </a>
       </div>
