--- a/index.html
+++ b/index.html
@@ -180,12 +180,12 @@
                   <li>
                     <i class='bx bxs-cake'></i>
                     <strong>Birthdate:</strong>
-                    28 July 2001
+                    31 March 1997
                   </li>
                   <li>
                     <i class='bx bxs-city'></i>
                     <strong>Address:</strong>
-                    Toukh, Al-Qalyubia, Egypt
+                    Ontario, Canada
                   </li>
                   
                 </ul>
@@ -195,22 +195,18 @@
                   <li>
                     <i class='bx bxs-graduation'></i>
                     <strong>Education:</strong>
-                    Fresh Graduated
+                    Cyber Security
                   </li>
                   <li>
                     <i class='bx bxs-phone-call'></i>
                     <strong>Phone Call:</strong>
-                    +201201632406
+                    +13139031693
                   </li>
                 </ul>
               </div>
             </div>
             <div class="row">
               <div class="col-lg-6">
-                <a href="https://root-x.dev/publisher/mohamedayman/" target="_blank" class="resumeLink">
-                  <i class='bx bx-link-external'></i>
-                  Articles
-                </a>
               </div>
             </div>
           </div>
