--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>SOC Analyst Tier 1</h3>
             <p>
-              SOC Analyst and Cyber Security Enthusiast, hard worker, self-learner, and a team player with. Seeking for a job or internship in Security Operation Center (SOC Analyst) and I am passionate about working in an environment where I can use my knowledge and hone my skills to participate in its growth and be an effective entity to it and the team.
+              Cyber Security graduate and enthusiast with hands-on experience in real-time security event monitoring, security incident investigations, incident response, digital forensics, and other blue teaming tasks. I have a proven ability to effectively handle incidents and excel in developing and implementing incident response plans. I am seeking a challenging environment where I can improve my efficiency and make a meaningful contribution to the company's success and assist organizations in safeguarding their assets from cyberattacks.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -195,7 +195,7 @@
                   <li>
                     <i class='bx bxs-graduation'></i>
                     <strong>Education:</strong>
-                    Cyber Security Graduate at Fanshawe College
+                    Cyber Security Graduate
                   </li>
                   <li>
                     <i class='bx bxs-phone-call'></i>
