--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>SOC Analyst Tier 1</h3>
             <p>
-              Cyber Security graduate and enthusiast with hands-on experience in real-time security event monitoring, security incident investigations, incident response, digital forensics, and other blue teaming tasks. I have a proven ability to effectively handle incidents and excel in developing and implementing incident response plans. I am seeking a challenging environment where I can improve my efficiency and make a meaningful contribution to the company's success and assist organizations in safeguarding their assets from cyberattacks.
+              Cyber Security graduate and enthusiast with hands-on experience in real-time security event monitoring, security incident investigations, incident response, digital forensics, and other blue team tasks. I have a proven ability to effectively handle incidents and excel in developing and implementing incident response plans. I am seeking a challenging environment where I can improve my efficiency and make a meaningful contribution to the company's success and assist organizations in safeguarding their assets from cyberattacks.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -239,7 +239,7 @@
                           <li>Knowledge of Windows and Linux operating systems</li>
                           <li>Aware of Incident Handling</li>
                           <li>Basic Knowledge of Network security technologies (Firewalls, IDS/IPS, WAF, Antivirus…)</li>
-                          <li>Basic knowledge in SIEM technologies (IBM QRadar - ELK)</li>
+                          <li>Basic knowledge in SIEM technologies (IBM QRadar, ELK, Microsoft Sentinel)</li>
                           <li>Basic Knowledge in threat intelligence</li>
                           <li>Basic knowledge in cyber attacks.</li>
                           <li>Basic knowledge about vulnerability assessment</li>
@@ -262,7 +262,7 @@
                           <li>Programming Languages (C++ Basics, Python)</li>
                           <li>Basic Knowledge of Cryptographic Techniques</li>
                           <li>Knowledge of Virtual Machines (VMware Workstation - Oracle Virtual Box)</li>
-                          <li>Capture The Flag (CTF) Player (Cyber Talent - Try Hack Me)</li>
+                          <li>Capture The Flag (CTF) Player (Hackthebox - Try Hack Me)</li>
                           <li>Web Development (HTML5 - CSS3 - JavaScript)</li>
                           <li>Knowledge of Git & GitHub</li>
                         </ul>
@@ -292,15 +292,6 @@
             
           </p>
         </div>
-
-        <div class="row">
-          <div class="col-lg-6">
-            <h3 class="resume-title">Summary</h3>
-            <div class="resume-item pb-0">
-              <h4>About</h4>
-              <p>
-                Cybersecurity enthusiastic, hard worker, self-learner, and a team player with a major in information security and digital forensics. Seeking for a job or internship in Security Operation Center (SOC Analyst) passionate about working in an environment where I can use my knowledge and hone my skills to participate in its growth and be an effective entity to it and the team.
-              </p>
               
             </div>
 
