--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
             <div class="resume-item pb-0">
               <h4>About</h4>
               <p>
-                test
+                Recent Cyber Security graduate with 3 Co-ops in IT security. Specialized in incident response, threat hunting, and policy auditing for SIEM platforms. Highly proficient in Microsoft security products and recieved direct training from the Microsoft Cyber Team. I am eager to leverage my knowledge, experience, and skills to contribute to a cyber security team.
               </p> 
            
       
@@ -307,13 +307,13 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Bachelor’s Degree in Computer Science</h4>
-              <h5>2019 - 2023</h5>
-              <p><em>Faculty of Computers and Artificial Intelligence Benha University</em></p>
+              <h4>Cyber Secutiy - Advanced Diploma - Co-op Endorsed </h4>
+              <h5>2020 - 2023</h5>
+              <p><em>Fanshawe College</em></p>
               <div class="project d-flex">
                 <ul>
-                  <li>Department Information Security and Digital Forensics</li>
-                  <li>Total GPA (3.7) Excellent</li>
+                  <li>Department Information Technology and Cecurity</li>
+                  <li>Total GPA (3.77)</li>
                 </ul>
               </div>
             </div>
