--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
               <p><em>Fanshawe College</em></p>
               <div class="project d-flex">
                 <ul>
-                  <li>Department Information Technology and Cecurity</li>
+                  <li>Department Information Technology and Security</li>
                   <li>Total GPA (3.77)</li>
                 </ul>
               </div>
@@ -322,21 +322,7 @@
               <h4>Certifications</h4>
               <div class="project d-flex">
                 <ul>
-                  <li>Network and Information Security (NIS) DEY - NTI</li>
-                  <li>Cisco Certified CyberOps Associate </li>
-                  <li>Cisco Certified Network Associate (CCNA) NetAcad</li>
-                  <li>Cisco Cyber Security (NTI) </li>
-                  <li>Cisco Certified Network Security</li>
-                  <li>Certified Huawei Certified ICT Associate (HCIA) Datacom. </li>
-                  <li>Cyber Security Program ITI</li>
-                  <li>Cyber Security Information Technology Institute (ITI) </li>
-                  <li>IT system Admin MaharaTech Platform</li>
-                  <li>RHCSA: Red Hat Certified System Administrator (Pluralsight Platform)</li>
-                  <li>NES1 Network Security Associate</li>
-                  <li>DDOS Attack Workshop BARQ Systems</li>
-                  <li>Web Developer using PHP (120 hrs.) ITI </li>
-                  <li>HTML, CSS, and JavaScript for Web Developers Coursera</li>
-                  <li>Web Design for Everybody Capstone (5 Courses) Coursera </li>
+                  <li>Microsoft Security Operations Analyst (SC-200)</li>
                 </ul>
               </div>
               <a href="#certifications" class="resumeLink scrollto">
