--- a/index.html
+++ b/index.html
@@ -434,19 +434,19 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-iti">
             <div class="portfolio-wrap">
               <img
-                data-src="assets/img/certifications/ITI/ITI_Cyber_Security.jpg"
+                data-src="assets/img/certifications/SC-200.png"
                 class="img-fluid lazy"
-                alt="ITI Summer Training"
+                alt="Microsoft Certification"
               />
               <div class="portfolio-info">
                 <h4>Cyber Security</h4>
                 <p>ITI</p>
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/certifications/ITI/ITI_Cyber_Security.jpg"
+                    href="assets/img/certifications/SC-200.png"
                     data-gall="portfolioGallery"
                     class="venobox"
-                    title="Open Source Web Development Track Summer Training"
+                    title="Microsoft Security Operations Analyst"
                   >
                     <i class="bx bx-zoom-in"></i>
                   </a>
