--- a/index.html
+++ b/index.html
@@ -439,8 +439,8 @@
                 alt="Microsoft Certification"
               />
               <div class="portfolio-info">
-                <h4>Cyber Security</h4>
-                <p>ITI</p>
+                <h4>Security Analyst</h4>
+                <p>Microsoft</p>
                 <div class="portfolio-links">
                   <a
                     href="assets/img/certifications/SC-200.png"
@@ -454,10 +454,11 @@
               </div>
             </div>
           </div>
+          
         </div>
       </div>
     </section>
-    <!-- End Certifications -->
+    <!-- End of Certifications -->
 
     <!-- Start Portfolio -->
     <section id="portfolio" class="portfolio section-bg">
