--- a/index.html
+++ b/index.html
@@ -924,19 +924,16 @@
           &copy; <span id="footer-copyright-year"></span> | <strong><span class="name">Mohamed Ayman Elshazly</span></strong>
         </div>
         <div class="social-links col-lg-6">
-          <a href="https://github.com/0xElshazly" target="_blank" class="github">
+          <a href="https://github.com/0xMeho" target="_blank" class="github">
             <i class="bx bxl-github"></i>
           </a>
-          <a href="https://www.linkedin.com/in/mohamed-ayman-elshazly-4b303b203/" target="_blank" class="linkedin">
+          <a href="https://www.linkedin.com/in/ali-meho-1n9sa30b9/" target="_blank" class="linkedin">
             <i class="bx bxl-linkedin"></i>
           </a>
-          <a href="https://twitter.com/0xElshazly" target="_blank" class="twitter">
+          <a href="https://twitter.com/0xMeho" target="_blank" class="twitter">
             <i class="bx bxl-twitter"></i>
           </a>
-          <a href="https://www.facebook.com/profile.php?id=100012710940984" target="_blank" class="facebook">
-            <i class="bx bxl-facebook-circle"></i>
-          </a>
-          <a href="mailto:mohamed.ayman.alshazly@gmail.com" target="_blank" class="envelope">
+          <a href="mailto:a_meho@fanshaweonline.ca" target="_blank" class="envelope">
             <i class="bx bxs-envelope"></i>
           </a>
         </div>
@@ -957,17 +954,14 @@
 
   <!-- Start SEO Hidden Keywords -->
   <div class="hidden-keywords" style="display: none">
-    <h2>mohamed-ayman-elshazly-4b303b203</h2>
-    <h2>mohamed-ayman</h2>
-    <h2>0xElshazly</h2>
-    <h2>Mohamed Ayman</h2>
-    <h2>Mohamed Ayman Elshazly</h2>
-    <h2>Mohamed Elshazly</h2>
-    <h2>Mohamed Elshazly SOC Analyst</h2>
-    <span>mohamed ayman</span>
-    <span><strong>0xElshazly</strong></span>
+    <h2>ali-meho</h2>
+    <h2>0xMeho</h2>
+    <h2>Ali Meho</h2>
+    <h2>Ali Meho SOC Analyst</h2>
+    <span>ali meho</span>
+    <span><strong>0xMeho</strong></span>
     <form>
-      <input type="hidden" name="mohamedayman" value="mohamedayman">
+      <input type="hidden" name="alimeho" value="alimeho">
     </form>
   </div>
   <!-- End SEO Hidden Keywords -->
