--- a/index.html
+++ b/index.html
@@ -921,7 +921,7 @@
     <div class="container">
       <div class="row d-flex align-items-center">
         <div class="copyright col-lg-6">
-          &copy; <span id="footer-copyright-year"></span> | <strong><span class="name">Mohamed Ayman Elshazly</span></strong>
+          &copy; <span id="footer-copyright-year"></span> | <strong><span class="name">Ali Meho</span></strong>
         </div>
         <div class="social-links col-lg-6">
           <a href="https://github.com/0xMeho" target="_blank" class="github">
