--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>SOC Analyst Tier 1</h3>
             <p>
-              Cyber Security graduate and enthusiast with hands-on experience in real-time security event monitoring, security incident investigations, incident response, digital forensics, and other blue team tasks. I have a proven ability to effectively handle incidents and excel in developing and implementing incident response plans. I am seeking a challenging environment where I can improve my efficiency and make a meaningful contribution to the company's success and assist organizations in safeguarding their assets from cyberattacks.
+             Cyber Security graduate and enthusiast with hands-on experience in real-time security event monitoring, security incident investigations, incident response, threat hunting, and other blue team tasks. I have a proven ability to effectively handle incidents and excel in developing, improving, and implementing incident response plans. I'm looking for a challenging workplace where I can enhance my skills and help protect companies from ever-evolving cyberattacks.
             </p>
             <div class="row">
               <div class="col-lg-6">
