--- a/index.html
+++ b/index.html
@@ -832,7 +832,7 @@
         <div class="section-title">
           <h2>Contact</h2>
           <p>
-            Take A Coffee And Chat With Me.
+            Grab A Coffee and Chat with me
           </p>
         </div>
 
@@ -842,19 +842,19 @@
               <div class="address">
                 <i class='bx bxs-map'></i>
                 <h4>Location:</h4>
-                <p>Toukh, Al-Qalyubia</p>
+                <p>Ontario, Canada</p>
               </div>
 
               <div class="email">
                 <i class='bx bxs-envelope'></i>
                 <h4>Email:</h4>
-                <p>mohamed.ayman.alshazly@gmail.com</p>
+                <p>a_meho@fanshaweonline.ca</p>
               </div>
 
               <div class="phone">
                 <i class='bx bxs-phone'></i>
                 <h4>Call:</h4>
-                <p>+201201632406</p>
+                <p>+13139031693</p>
               </div>
             </div>
           </div>
