--- a/index.html
+++ b/index.html
@@ -832,7 +832,7 @@
         <div class="section-title">
           <h2>Contact</h2>
           <p>
-            Grab A Coffee and Chat with me
+            Get In Touch With Me
           </p>
         </div>
 
@@ -861,13 +861,14 @@
 
           <div class="col-lg-8 mt-5 mt-lg-0">
             <form
-              action="#"
+              action="https://api.web3forms.com/submit"
               method="POST"
               class="php-email-form"
               id="contact-form"
             >
               <div class="form-row">
                 <div class="col-md-6 form-group">
+                  <input type="hidden" name="access_key" value="0c5f58b0-13b3-4bd4-88c8-e090efcdc9f1">
                   <input
                     type="text"
                     name="name"
