--- a/index.html
+++ b/index.html
@@ -863,7 +863,7 @@
             <form
               action="https://api.web3forms.com/submit"
               method="POST"
-              class="contact-left"
+              class="php-email-form"
               id="contact-form"
             >
               <div class="form-row">
