--- a/index.html
+++ b/index.html
@@ -336,15 +336,14 @@
             <h3 class="resume-title">Experiences</h3>
             <div class="resume-item">
               <h4>Internships</h4>
-              <h5>2022 – PRESENT</h5>
+              <h5>GOVERNMENT OF CANADA - ESDC (2023)</h5>
+              <h5> IT Security Analyst</h5>
               <div class="project d-flex">
                 <ul>
-                  <li>BARQ Systems & NETSCOUT Internship [December]</li>
-                  <li>Digital Egypt Youth NTI Network and Information Security (NIS) (3 Month)</li>
-                  <li>Summer Training Information Technology Institute (ITI) Training [August]</li>
-                  <li>Student Grant: ITI System Administration Diploma (Pluralsight Platform)</li>
-                  <li>ITI Tech Leaps (Initiative Wathabat) [July - February]</li>
-                  <li>Intro to Cybersecurity Bootcamp (Cyber Talent) [July]</li>
+                  <li>Reviewing logs and triaging alerts in SIEM</li>
+                  <li>Analyzing threats and identifying suspicious behavior</li>
+                  <li>Researching/Understanding vulnerabilities</li>
+                  <li>Contributing to team innovation through ideas for process improvement & efficiency</li>
                 </ul>
               </div>
 
