--- a/index.html
+++ b/index.html
@@ -348,24 +348,16 @@
               </div>
 
 
-              <h5>2021 – 2022</h5>
+              <h5>EMCO Corporation (2022)</h5>\
+              <h5>IT Specialist</h5>
               <div class="project d-flex">
                 <ul>
-                  <li>Summer Training in National Telecommunication Institute (NTI)</li>
-                  <li>Courses in Next Technology Leaders (NTL) Providing by Coursera</li>
-                  <li>Certified Huawei Certified ICT Associate (HCIA) Datacom</li>
+                  <li>Worked with the help-desk team and provided first line technical support</li>
+                  <li>Worked with the SOC team and performed daily monitoring and incident response</li>
+                  <li>Gained experience in cloud services as well as on-prem directory management</li>
+                  <li>Contributed to adding solutions to the “playbook” for the IT and SOC team</li>
                 </ul>
               </div>
-
-              <h5>2020 – 2021</h5>
-              <div class="project d-flex">
-                <ul>
-                  <li>Summer Training at the Faculty of Computers and Artificial Intelligence
-                    Benha University [July]</li>
-                </ul>
-              </div>
-
-            </div>
 
             
           
