--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
 
 
               <h5>EMCO Corporation (2022)</h5>
-              <p></p>
+              
               <h5> IT Specialist</h5>
               <div class="project d-flex">
                 <ul>
@@ -366,13 +366,12 @@
               <h4>Projects</h4>
               <div class="project d-flex">
                 <ul>
-                  <li>Ransomware Detection Using Machine Learning</li>
-                  <li>Code Educational Platform Website</li>
-                  <li>Doctor’s Clinic Booking Application </li>
-                  <li>Encryption Algorithm Applications</li>
+                  <li>Malware that detects virtualization</li>
+                  <li>Created vulnarable machines for ethical hacking practice</li>
+                  <li></li>
                 </ul>
               </div>
-              <a href="https://github.com/0xElshazly" target="_blank" class="resumeLink">
+              <a href="https://github.com/0xMeho" target="_blank" class="resumeLink">
                 <i class='bx bx-link-external'></i>
                 Projects Reference
               </a>
@@ -383,8 +382,8 @@
               <h4>Volunteering</h4>
               <div class="project d-flex">
                 <ul>
-                  <li>Ambassador MaharaTech – ITI</li>
-                  <li>Cyber Security Articles Publisher At Root-X</li>
+                  <li></li>
+                  <li></li>
                 </ul>
               </div>
               
