--- a/index.html
+++ b/index.html
@@ -348,8 +348,8 @@
               </div>
 
 
-              <h5>EMCO Corporation (2022)            </h5>
-              <h5> IT Specialist</h5>
+              <h5>EMCO CORPORATION - (2022)</h5>
+              <h6> IT Specialist</h6>
               <div class="project d-flex">
                 <ul>
                   <li>Worked with the help-desk team and provided first line technical support</li>
