--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
                   </li>
                   <li>
                     <i class='bx bxs-phone-call'></i>
-                    <strong>Phone Call:</strong>
-                    +13139031693
+                    <strong>Email:</strong>
+                    a_meho@fanshaweonline.ca
                   </li>
                 </ul>
               </div>
