--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                     Cyber Security Graduate
                   </li>
                   <li>
-                    <i class='bx bxs-phone-call'></i>
+                    <i class='bx bxs-envelope'></i>
                     <strong>Email:</strong>
                     a_meho@fanshaweonline.ca
                   </li>
