--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
     <!-- End Portfolio -->
 
     <!-- Start Contact -->
-    <section id="contact" class="contact">
+   <!-- <section id="contact" class="contact">
       <div class="container" data-aos="fade-up">
         <div class="section-title">
           <h2>Contact</h2>
@@ -562,6 +562,7 @@
       </div>
     </section>
     <div class="form-alert"></div>
+        -->
     <!-- End Contact -->
   </main>
 
