--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
     <!-- End Portfolio -->
 
     <!-- Start Contact -->
-   <!-- <section id="contact" class="contact">
+    <section id="contact" class="contact">
       <div class="container" data-aos="fade-up">
         <div class="section-title">
           <h2>Contact</h2>
@@ -507,7 +507,7 @@
             </div>
           </div>
 
-          <div class="col-lg-8 mt-5 mt-lg-0">
+       <!--   <div class="col-lg-8 mt-5 mt-lg-0">
             <form
               action="https://api.web3forms.com/submit"
               method="POST"
@@ -562,7 +562,6 @@
       </div>
     </section>
     <div class="form-alert"></div>
-        -->
     <!-- End Contact -->
   </main>
 
