--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
             </div>
           </div>
 
-       <!--   <div class="col-lg-8 mt-5 mt-lg-0">
+          <div class="col-lg-8 mt-5 mt-lg-0">
             <form
               action="https://api.web3forms.com/submit"
               method="POST"
