--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
               <p><em>Fanshawe College</em></p>
               <div class="project d-flex">
                 <ul>
-                  <li>Department Information Technology and Security</li>
+                  <li>Department of Information Technology and Security</li>
                   <li>Total GPA (3.77)</li>
                 </ul>
               </div>
