--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
       </div>
       <div class="m-7">
         <form action="https://api.web3forms.com/submit" method="POST" id="form">
-          <input type="hidden" name="access_key" value="YOUR_ACCESS_KEY_HERE" />
+          <input type="hidden" name="access_key" value="0c5f58b0-13b3-4bd4-88c8-e090efcdc9f1" />
           <input type="hidden" name="subject" value="New Submission from Web3Forms" />
           <input type="checkbox" name="botcheck" id="" style="display: none;" />
 
