--- a/index.html
+++ b/index.html
@@ -509,14 +509,16 @@
 
           <div class="col-lg-8 mt-5 mt-lg-0">
             <form
-              action="https://api.web3forms.com/submit"
               method="POST"
               class="php-email-form"
               id="contact-form"
             >
               <div class="form-row">
                 <div class="col-md-6 form-group">
-                  <input type="hidden" name="access_key" value="0c5f58b0-13b3-4bd4-88c8-e090efcdc9f1">
+                   <form action="https://api.web3forms.com/submit" method="POST" id="form">
+                      <input type="hidden" name="access_key" value="0c5f58b0-13b3-4bd4-88c8-e090efcdc9f1" />
+                      <input type="hidden" name="subject" value="New Submission from Web3Forms" />
+                      <input type="checkbox" name="botcheck" id="" style="display: none;" />
                   <input
                     type="text"
                     name="name"
@@ -643,10 +645,6 @@
           <div class="mb-6">
             <label for="email" class="block mb-2 text-sm text-gray-400">Email Address</label>
             <input type="email" name="email" id="email" placeholder="you@company.com" required class="w-full px-3 py-2 h-12 rounded-sm placeholder-gray-500 text-gray-900 bg-gray-100 text-sm focus:outline-none" />
-          </div>
-          <div class="mb-6">
-            <label for="phone" class="block mb-2 text-sm text-gray-400">Phone Number</label>
-            <input type="text" name="phone" id="phone" placeholder="+1 (555) 1234-567" required class="w-full px-3 py-2 h-12 rounded-sm placeholder-gray-500 text-gray-900 bg-gray-100 text-sm focus:outline-none" />
           </div>
           <div class="mb-6">
             <label for="message" class="block mb-2 text-sm text-gray-400">Your Message</label>
