--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
     <!-- End Portfolio -->
 
     <!-- Start Contact -->
-    <section id="contact" class="contact">
+  <!--  <section id="contact" class="contact">
       <div class="container" data-aos="fade-up">
         <div class="section-title">
           <h2>Contact</h2>
@@ -515,10 +515,6 @@
             >
               <div class="form-row">
                 <div class="col-md-6 form-group">
-                   <form action="https://api.web3forms.com/submit" method="POST" id="form">
-                      <input type="hidden" name="access_key" value="0c5f58b0-13b3-4bd4-88c8-e090efcdc9f1" />
-                      <input type="hidden" name="subject" value="New Submission from Web3Forms" />
-                      <input type="checkbox" name="botcheck" id="" style="display: none;" />
                   <input
                     type="text"
                     name="name"
@@ -563,7 +559,8 @@
         </div>
       </div>
     </section>
-    <div class="form-alert"></div>
+    <div class="form-alert"></div> -->
+        
     <!-- End Contact -->
   </main>
 
