--- a/index.html
+++ b/index.html
@@ -566,10 +566,10 @@
     <div class="max-w-md mx-auto my-10 bg-gray-800 p-5 rounded-md shadow-sm">
       <div class="text-center">
         <h1 class="my-3 text-3xl font-semibold text-gray-100">
-          Contact Us
+          Contact
         </h1>
         <p class="text-gray-400 dark:text-gray-400">
-          Fill up the form below to send us a message.
+          Get in touch with me
         </p>
       </div>
       <div class="m-7">
@@ -579,7 +579,7 @@
           <input type="checkbox" name="botcheck" id="" style="display: none;" />
 
           <div class="mb-6">
-            <label for="name" class="block mb-2 text-sm text-gray-400">Full Name</label>
+            <label for="name" class="col-md-6 form-group">Full Name</label>
             <input type="text" name="name" id="name" placeholder="John Doe" required class="w-full px-3 py-2 h-12 rounded-sm placeholder-gray-500 text-gray-900 bg-gray-100 text-sm focus:outline-none" />
           </div>
           <div class="mb-6">
