--- a/index.html
+++ b/index.html
@@ -579,8 +579,8 @@
           <input type="checkbox" name="botcheck" id="" style="display: none;" />
 
           <div class="mb-6">
-            <label for="name" class="col-md-6 form-group">Full Name</label>
-            <input type="text" name="name" id="name" placeholder="John Doe" required class="w-full px-3 py-2 h-12 rounded-sm placeholder-gray-500 text-gray-900 bg-gray-100 text-sm focus:outline-none" />
+            <label for="name" class="block mb-2 text-sm text-gray-400">Full Name</label>
+            <input type="text" name="name" id="name" placeholder="Your Name" required class="w-full px-3 py-2 h-12 rounded-sm placeholder-gray-500 text-gray-900 bg-gray-100 text-sm focus:outline-none" />
           </div>
           <div class="mb-6">
             <label for="email" class="block mb-2 text-sm text-gray-400">Email Address</label>
