--- a/index.html
+++ b/index.html
@@ -618,6 +618,7 @@
   <!-- Vendor Scripts [jQuery - Form - Lazy - Bootstrap - Waypoints - IsoTop - Venobox - TypedJS - AOS] -->
   <script src="assets/js/all.vendors.min.js"></script>   
 
+  <!-- Contact #2
   <div class="flex items-center min-h-screen bg-gray-900">
   <div class="container mx-auto">
     <div class="max-w-md mx-auto my-10 bg-gray-800 p-5 rounded-md shadow-sm">
@@ -662,7 +663,7 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
         
   <!-- Main Script -->
   <script src="assets/js/app.js"></script>
