--- a/index.html
+++ b/index.html
@@ -480,10 +480,10 @@
       <div class="max-w-md mx-auto my-10 bg-gray-800 p-5 rounded-md shadow-sm">
         <div class="text-center">
           <h1 class="my-3 text-3xl font-semibold text-gray-100">
-          Contact Us (not working at the moment, you can email me at a_meho@fanshaweonline.ca)
+          Contact Me (not working at the moment, you can email me at a_meho@fanshaweonline.ca)
         </h1>
         <p class="text-gray-400 dark:text-gray-400">
-          Fill up the form below to send us a message.
+          Get in touch with me
         </p>
       </div>
       <div class="m-7">
