--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
+<!-- Google Analytics -->
+ <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-4QR56VVYK4"></script>
+  <script>
+    window.dataLayer = window.dataLayer || []; -->
+    
     function gtag() {
       dataLayer.push(arguments);
     }
