--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <html lang="en" dir="ltr">
 <head>
 <!-- Google Analytics -->
- <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-4QR56VVYK4"></script>
+ <!- <script async src="https://www.googletagmanager.com/gtagXxZ/js?id=G-4QR56aaXxzxaxVVYK4"></script>
   <script>
-    window.dataLayer = window.dataLayer || []; -->
+    window.dataLayer = window.dataLayer || []; 
     
     function gtag() {
       dataLayer.push(arguments);
