--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en" dir="ltr">
 <head>
 <!-- Google Analytics -->
- <!- <script async src="https://www.googletagmanager.com/gtagXxZ/js?id=G-4QR56aaXxzxaxVVYK4"></script>
+ <!-- <script async src="https://www.googletagmanager.com/gtagXxZ/js?id=G-4QR56aaXxzxaxVVYK4"></script>
   <script>
     window.dataLayer = window.dataLayer || []; 
     
@@ -13,7 +13,7 @@
 
     gtag("js", new Date());
 
-    gtag("config", "G-4QR56VVYK4");
+    gtag("config", "G-4QR56VVYK4"); -->
   </script>
 
   <!-- Meta -->
